test/syntaxerrors/TestBetaError1.jdc
int numberOne;
int number Two;
println("Hello world 2);